--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   
   <groupId>io.crums</groupId>
   <artifactId>unit-io</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   
   
